--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_login3">Sign in</string>
     <string name="title_activity_ejemplo_log_in">Sign in</string>
     <string name="title_activity_sign_in">Sign in</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
